# Elevation-Aware-SSL

./: .gitignore  DataPreprocessing.py  EDA.py  README.md  commit.sh  pyproject.toml
MasterThesis/: EDA.py  preprocessing.py
MasterThesis/augmentation/: __init__.py  augmentation.py
MasterThesis/backbone/: resnet.py
MasterThesis/classification/: dataset.py  metrics.py  model.py  utils.py  wandb_utils.py
MasterThesis/core/: config.py
MasterThesis/models/: __init__.py  glcnet.py  simclr.py  v3p.py
MasterThesis/models/classification/: randominit.py  resnet  resnet.py  simclr.py
MasterThesis/models/segmentation/: v3p.py
MasterThesis/regression/: dataset.py  model.py  resnet.py  utils.py
MasterThesis/regression/metrics/: utils.py
MasterThesis/regression/sl/: __init__.py  dataloader.py  supervised.py  utils.py
MasterThesis/segmentation/: __init__.py  dataset.py  decoder.py  model.py  utils.py
MasterThesis/segmentation/sl/: decoder.py  encoder.py  header.py  model.py
MasterThesis/ssl/: augmentation.py
MasterThesis/ssl/elevation/: dataset.py  model.py  utils.py
MasterThesis/ssl/glcnet/: dataset.py  model.py
MasterThesis/ssl/simclr/: __init__.py  dataset.py  models.py  trainer.py  utils.py
MasterThesis/trainer/: trainer.py
MasterThesis/utils/: metrics.py
MasterThesis/utils/classification/: losses.py  metrics.py  (+2 more)
core/: config.py
elevation_aware_ssl/: EDA.py  preprocessing.py
elevation_aware_ssl/backbone/: resnet.py
elevation_aware_ssl/classification/: dataset.py  model.py  wandb_utils.py
elevation_aware_ssl/regression/: __init__.py  dataset.py  model.py
elevation_aware_ssl/segmentation/: dataset.py  decoder.py  encoder.py  model.py  utils.py
elevation_aware_ssl/trainer/: trainer.py
utils/: data_for_seg.py  metrics.py  simclr.py
(+39 files in other folders)
