[tool.poetry]
name = "MasterThesis"
version = "0.1.0"
description = ""
authors = ["omarcastano <omar.castano@udea.edu.co>"]
packages = [
    { include = "MasterThesis"}
]

[tool.poetry.dependencies]
python = "^3.7.13"
geopandas = "^0.10.2"
earthpy = "^0.9.4"
wandb = "^0.12.21"
albumentations = "^1.2.1"
pytorch-lightning = "^1.7.4"
lightning-bolts = "^0.5.0"
lightly = "^1.2.29"

[tool.poetry.dev-dependencies]
GDAL = "3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
