[tool.poetry]
name = "MasterThesis"
version = "0.1.0"
description = ""
authors = ["omarcastano <omar.castano@udea.edu.co>"]
packages = [
    { include = "MasterThesis"}
]

[tool.poetry.dependencies]
python = ">3.8.1, <3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"