[tool.poetry]
name = "MasterThesis"
version = "0.1.0"
description = ""
authors = ["omarcastano <omar.castano@udea.edu.co>"]
packages = [
    { include = "MasterThesis"}
]

[tool.poetry.dependencies]
python = ">=3.8.1, <3.10.0"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.13.1%2Bcpu-cp39-cp39-linux_x86_64.whl"}
seaborn = "^0.13.0"
scikit-learn = "^1.3.1"
tqdm = "^4.66.1"
plotly = "^5.17.0"
wandb = "^0.15.12"
geopandas = "<0.14.0"
gdal = "3.3.3"
earthpy = "^0.9.4"
torchvision = {url = "https://download.pytorch.org/whl/cpu/torchvision-0.14.1%2Bcpu-cp39-cp39-linux_x86_64.whl"}
albumentations = "^1.3.1"
lightly = "^1.4.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"